Perbaikan terakhir: Update Profil User oleh User

--- a/public/app-layout/style.css
+++ b/public/app-layout/style.css
@@ -1937,8 +1937,9 @@ input:focus {
   border: none;
   border-radius: 0; }
   .form-control:focus {
-    box-shadow: none;
-    background-color: #393c3d; }
+    /* box-shadow: none; */
+  color: #ffffff;
+  background-color: #393c3d; }
 
 select.form-control {
   -webkit-appearance: none;
