--- a/public/app-layout/style.css
+++ b/public/app-layout/style.css
@@ -245,6 +245,7 @@ input:focus {
     transform: translate(19px, 0); } }
 .section-heading {
   position: relative;
+  color: black;
   z-index: 1;
   margin-bottom: 50px;
   text-align: center; }
@@ -718,7 +719,7 @@ input:focus {
     z-index: 1;
     padding-left: 20px; }
     .single-blog-post .post-content .post-title {
-      color: #ffffff;
+      color: #000;
       margin-bottom: 5px;
       display: block;
       font-size: 16px;
